# tutorial_cpp_000_template_main.cpp
add_executable(tutorial_cpp_000_template_main tutorial_cpp_000_template_main.cpp)
target_link_libraries(tutorial_cpp_000_template_main glog)

# tutorial_cpp_001_simple_template_main
add_executable(tutorial_cpp_001_simple_template_main tutorial_cpp_001_simple_template_main.cpp)
target_link_libraries(tutorial_cpp_001_simple_template_main glog)

# tutorial_cpp_002_simple_class_template_main
add_executable(tutorial_cpp_002_simple_class_template_main tutorial_cpp_002_simple_class_template_main.cpp)
target_link_libraries(tutorial_cpp_002_simple_class_template_main glog)

# tutorial_cpp_003_simple_non_type_class_template_main
add_executable(tutorial_cpp_003_simple_non_type_class_template_main tutorial_cpp_003_simple_non_type_class_template_main.cpp)
target_link_libraries(tutorial_cpp_003_simple_non_type_class_template_main glog)

# tutorial_cpp_004_simple_variadic_template
add_executable(tutorial_cpp_004_simple_variadic_template tutorial_cpp_004_simple_variadic_template.cpp)
target_link_libraries(tutorial_cpp_004_simple_variadic_template glog)